# gqe

./: .coderabbit.yaml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: setup-devcontainer.sh
benchmark/: CMakeLists.txt  load_tpcds.cpp  tpc.cpp  utility.hpp
benchmark/hardcoded/: q22.cpp  q3.cpp  q38.cpp  q3_udr.cu  q43.cpp  q43_udr.cu  q48.cpp  q6.cpp  q7.cpp  q7_udr.cu
cmake/: nvcomp.cmake
conda/: docker-aarch64.yml  docker-x86_64.yml
include/gqe/: catalog.hpp  query_context.hpp  task_manager_context.hpp  types.hpp
include/gqe/executor/: optimization_parameters.hpp  task.hpp  task_graph.hpp
include/gqe/executor_next/utilities/: thread_event.hpp
include/gqe/logical/: aggregate.hpp  fetch.hpp  filter.hpp  from_substrait.hpp  join.hpp  project.hpp  read.hpp  relation.hpp  set.hpp  sort.hpp  user_defined.hpp  window.hpp  write.hpp
include/gqe/optimizer/: estimator.hpp  logical_optimization.hpp  optimization_configuration.hpp  physical_transformation.hpp  relation_properties.hpp
include/gqe/optimizer/rules/: fix_partial_filter_column_references.hpp  join_children_swap.hpp  join_unique_keys.hpp  not_not.hpp  projection_pushdown.hpp  string_to_int_literal.hpp  uniqueness_propagation.hpp
include/gqe/physical/: aggregate.hpp  fetch.hpp  filter.hpp  gen_ident_col.hpp  join.hpp  project.hpp  read.hpp  relation.hpp  set.hpp  sort.hpp  user_defined.hpp  window.hpp  write.hpp
include/gqe/qep/: state.hpp  task.hpp
include/gqe/rpc/serialization/: data_type.hpp  expression.hpp  statistics.hpp  storage.hpp  uuid.hpp
include/gqe/storage/: compression.hpp  in_memory.hpp  zone_map.hpp
include/gqe/utility/: cuda.hpp  cupti_activity.hpp  error.hpp  helpers.hpp  linux.hpp  multi_process_helpers.hpp  tpc_common.hpp  tpcds.hpp  tpch.hpp
include/gqe_test/: base_fixture.hpp
proto/: CMakeLists.txt  data_type.proto  ddl_extension.proto  task.proto  uuid.proto
rust/: Cargo.toml
rust/gqe-cli/src/: client.rs  server.rs
rust/producer/: Cargo.toml
src/: CMakeLists.txt  catalog.cpp  query_context.cpp  task_manager_context.cpp  types.cpp
src/executor/: optimization_parameters.cpp  task.cpp  task_graph.cpp
src/executor_next/utilities/: thread_event.cpp
src/logical/: from_substrait.cpp
src/memory_resource/: boost_shared_memory_resource.cpp  memory_utilities.cpp
src/node_manager/: context.cpp  node_manager.cpp
src/optimizer/: estimator.cpp  logical_optimization.cpp  physical_transformation.cpp  relation_properties.cpp
src/optimizer/rules/: join_children_swap.cpp  not_not.cpp  projection_pushdown.cpp
src/physical/: aggregate.cpp  filter.cpp  join.cpp  project.cpp  sort.cpp  window.cpp
src/qep/: state.cpp  task.cpp
src/rpc/: task_migration.cpp
src/storage/: compression.cpp  in_memory.cpp  nvcomp_adapter.cpp  parquet.cpp  parquet_reader.cpp  sliced_columns.cpp  zone_map.cpp
src/utility/: cuda.cpp  cupti_activity.cpp  error.cpp  linux.cpp  multi_process_helpers.cpp  tpcds.cpp  tpch.cpp
test/: CMakeLists.txt
test/end_to_end/: verify_parquet.py
test/executor/: join_task_test.cpp
test/executor_next/: test_utilities.hpp
test/executor_next/utilities/: signal_barrier_test.cpp  thread_event_test.cpp
test/integration/: flight_sql_ddl_test.cpp  in_memory_storage.cpp  logical_to_execution.cpp  substrait_to_physical.cpp
test/logical/: run_substrait_consumer.cpp  substrait_ddl_test.cpp  substrait_if_then_test.cpp
test/optimizer/: column_name_assignment_test.cpp  join_unique_keys_test.cpp  relation_properties_test.cpp  uniqueness_propagation_test.cpp
test/storage/: in_memory_read_task_test.cpp
test/utility/: cupti_test.cpp  linux_test.cpp  nccl_test.cpp
tpch_bench/: .gitignore  README.md
tpch_bench/agent/: README.md  agent_codegen.py
tpch_bench/agent/harness/: CMakeLists.txt  main.cpp  run_query.hpp
tpch_bench/agent_gqe/: PLAN.md  PLAN_v2_optimized_flow.md  README.md  RUNBOOK.md  crosscheck.sh  gen_reference.py  gqe_codegen.py  udr_codegen.py
tpch_bench/agent_gqe/fewshot/: q3_full.cpp  q43_plan.cpp  q7_plan.cpp
tpch_bench/agent_gqe/harness/: build_plan.hpp  build_plan_gen.cpp  gqe_runtime.hpp  main.cpp  plan_builder.hpp  udr_gen.cu
tpch_bench/agent_gqe/queries/: README.md  tpcds_q3.sql  tpcds_q7.sql
tpch_bench/common/: compare_parquet.py  gen_tpcds_data.py  gen_tpch_data.py
tpch_bench/cudf/: build_cudf_ndsh.sh  run_cudf_ndsh.sh
tpch_bench/env/: cudf-env.yml  gqe-env.yml
tpch_bench/gqe/: build_gqe.sh  build_gqe_v2.sh  build_query.sh  compare_udr.sh  profile_udr.sh  run_gqe_benchmark.sh  run_gqe_tpch.sh  verify_udr.sh
